<resources>
    <string name="app_name">Guests</string>
    <string name="menu_action_all_guests">All Guests</string>
    <string name="menu_action_present_guests">Present Guests</string>
    <string name="menu_action_absent_guests">Absent Guests</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="save_button">Save</string>
    <string name="present_status">Present</string>
    <string name="absent_status">Absent</string>
    <string name="confirmation_text">Confirmation</string>
    <string name="guest_name_text">Name</string>
    <string name="register_activity_toolbar_text">Guests</string>
    <string name="register_guest_button">Register Guest Button</string>
    <string name="guests_header">Guests Header</string>
    <string name="failed_saved_guest_action">The guest was not saved to the database!</string>
    <string name="successful_saved_guest_action">Saved guest successfully!</string>
    <string name="delete_guest_action">Delete Guest Action</string>
    <string name="constant_guest_status_filter">GUEST_STATUS_FILTER</string>
    <string name="successful_delete_action">Guest deleted successfully!</string>
    <string name="failed_delete_action_no_row_deleted">No guests were deleted!</string>
    <string name="failed_delete_action_more_than_one_row_deleted">More than one guest was deleted!</string>
    <string name="successful_update_action">Guest updated successfully!</string>
    <string name="failed_update_action_no_row_updated">No guests were updated!</string>
    <string name="failed_update_action_more_than_one_row_updated">More than one guest was updated!</string>
    <string name="remove_guest_dialog_title">Do you really want to remove this guest?</string>
    <string name="positive_remove_guest_dialog_response">Yes</string>
    <string name="negative_remove_guest_dialog_response">No</string>
    <string name="blank_guest_name_alert">Please enter the guest name!</string>
    <string name="no_guests_registered">There are no guests registered!</string>
    <string name="guest_extra">GUEST</string>
    <string name="log_tag">LIFECYCLE_METHOD</string>
</resources>